# omega_calendar_projetc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/production_calendar/: __init__.py  engine.py
src/production_calendar_omega.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
