[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "production-calendar-omega"
version = "3.0.0"
authors = [
  { name="Ivana Cruz", email="ivana.gac@gmail.com" },
]
description = "Motor definitivo para conversão de Tempo Civil em Tempo de Produção."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Scheduling",       
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Accounting", 
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/ivanagac/omega_calendar_projetc"
